# rag_platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci-slow.yml  ci.yml
configs/: app.yaml  cve-allowlist.yaml  embeddings.yaml  evals.yaml  generation.yaml  llm.yaml  logging.yaml  neo4j.yaml  otel-collector.yaml  parsing.yaml  prometheus.yml  retrieval.yaml  web_search.yaml
configs/llm/: ollama-gemma3-27b.yaml  ollama-glm52.yaml  ollama-llama33-70b.yaml  qwen3-14b.yaml  qwen3-30b.yaml
data/exports/: infra_baseline.json
datasets/goldens/: multimodal_baseline.json  qa_dataset.json  rag_platform_corpus.md  retrieval_baseline.json  retrieval_dataset.json
docker/: Dockerfile.api  Dockerfile.worker
docs/: dependency-policy.md  ocr-providers.md  security-advisories.md  type-safety.md
docs/adr/: 0001-page-boundary-chunking-strategy.md  0002-nvidia-nim-system-user-roles.md  0003-nvidia-nim-for-text-embeddings-and-reranking.md
docs/operations/: feedback-multi-replica.md
helm/rag-platform/: Chart.yaml  values.yaml
helm/rag-platform/templates/: _helpers.tpl  configmap.yaml  deployment-api.yaml  deployment-worker.yaml  hpa-api.yaml  ingress.yaml  pvc-models.yaml  pvc-qdrant.yaml  secret.yaml  service-api.yaml
infra/eks/: README.md
scripts/: _benchmark_utils.py  apply_basedpyright_fixes.py  benchmark.py  benchmark_chunk_sizes.py  benchmark_infra.py  benchmark_modality_recall.py  benchmark_techniques.py  build_multimodal_golden.py  check_dependencies.py  check_dependencies.sh  check_diskcache_cve.py  check_diskcache_cve.sh  check_lint_gate.py  check_multimodal_regression_gate.py  check_regression_gate.py  compare_embedding_providers.py  compare_models.py  ingest.py  migrate_ci_checks.sh  migrate_qdrant_image_dense.py  rebuild_embeddings.py  run_evals.py  sync_retrieval_golden.py
specs/: TODO.md
src/: main.py
src/api/: dependencies.py  rate_limit.py  security.py
src/api/routers/: chat.py  chunks.py  evals.py  feedback.py  health.py  ingest.py  metrics_router.py
src/api/schemas/: agent.py
src/core/: async_bridge.py  constants.py  dependency_audit.py  diskcache_cve_check.py  exceptions.py  lint_gate.py  logging.py  markdown_headings.py  settings.py  slide_records.py
src/domain/entities/: __init__.py  answer.py  chunk.py  document.py  evaluation.py  parsed_document.py  query.py  retrieval_filter.py  source_reference.py
src/domain/repositories/: __init__.py  embedding_repository.py  layout_parser_repository.py  llm_repository.py  metadata_repository.py  ocr_repository.py  reranker_repository.py  vector_store_repository.py  vision_repository.py  web_search_repository.py
src/domain/services/: evaluation_service.py  generation_service.py  ingestion_service.py  retrieval_service.py
src/evals/: golden_dataset.py  multimodal_golden_dataset.py  multimodal_regression_gate.py  regression_gate.py
src/evals/e2e/: benchmark_samples.py  chunk_size_sweep.py  infra_benchmark.py  rag_benchmark.py  technique_benchmark.py
src/evals/generation/: __init__.py  context_precision.py  faithfulness.py  hallucination.py  nim_judge.py  relevance.py
src/evals/retrieval/: __init__.py  modality_evaluator.py  modality_recall.py  mrr.py  ndcg.py  precision_at_k.py  recall_at_k.py
src/infrastructure/: provider_factory.py
src/infrastructure/cache/: redis_client.py
src/infrastructure/embeddings/: __init__.py  batch_reindex.py  bge_m3.py  cached_embedding_provider.py  clip_provider.py  cohere_provider.py  gemini_provider.py  nomic.py  nvidia_nim_provider.py  openai_provider.py  qwen_embedding.py  sentence_transformer_base.py  voyage_provider.py
src/infrastructure/llm/: __init__.py  llama_cpp_provider.py  nvidia_nim_provider.py
src/infrastructure/loaders/: __init__.py  docx_loader.py  html_loader.py  markdown_loader.py  pdf_loader.py  pptx_loader.py
src/infrastructure/metadata/: sqlite_store.py
src/infrastructure/ocr/: __init__.py  azure_di_provider.py  docling_backed.py  docling_provider.py  easyocr_provider.py  tesseract_provider.py
src/infrastructure/parsers/: __init__.py  docling_parser.py
src/infrastructure/rerankers/: bge_reranker.py  nvidia_nim_reranker.py  qwen_reranker.py
src/infrastructure/search/: __init__.py  web_search.py
src/infrastructure/vectordb/: __init__.py  bm25.py  bm25_disk.py  feedback_store.py  neo4j_graph.py  qdrant.py
src/observability/: metrics.py  tracing.py
src/prompts/retrieval/: step_back.txt  (+4 more)
src/rag/: structured_output.py
src/type_regression/: __init__.py  compression.py  contextual_headers.py
tests/benchmarks/: test_chunk_size_sweep.py  test_feedback_concurrency.py  test_generation_evals.py  test_infra_benchmark.py  test_retrieval_evals.py  test_technique_benchmark.py
tests/e2e/: test_nim_ingest_and_chat.py
tests/integration/: test_bge_m3.py  test_ingestion_pipeline.py  test_jaeger.py  test_llm.py  test_qdrant.py  test_reranker.py
tests/unit/: conftest.py  e2e_benchmark_helpers.py  hybrid_retriever_helpers.py  ingestion_helpers.py  test_adaptive_strategies.py  test_agent_pipeline.py  test_api.py  test_api_embedding_providers.py  test_api_security.py  test_async_bridge.py  test_benchmark_infra_cli.py  test_benchmark_modality_recall.py  test_benchmark_samples.py  test_benchmark_utils.py  test_bge_m3.py  test_bm25.py  test_bm25_disk.py  test_build_multimodal_golden.py  test_cached_embedding_provider.py  test_caption_chunker.py  test_chat_pipeline.py  test_chunk_metadata.py  test_chunk_size_sweep.py  test_chunk_type_registry.py  test_chunking.py  test_chunks.py  test_clip_provider.py  test_committed_goldens.py  test_compression.py  test_contextual_headers.py  test_coverage_gaps.py  test_crag.py  test_dense_retriever.py  test_dependency_audit.py  test_diskcache_cve_check.py  test_diversity.py  test_docling_parser.py  test_document_augmentation.py  test_embedding_batch_reindex.py  test_embedding_providers.py  (+79 more)
(+78 files in other folders)
