[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "rag-platform"
version = "0.1.0"
description = "Local enterprise RAG platform — Clean Architecture, Hybrid Search, llama.cpp"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # LLM
    "llama-cpp-python>=0.2.90",
    # Embeddings & Reranking
    "numpy>=1.26.0",
    "sentence-transformers>=3.0.0",
    "FlagEmbedding>=1.2.0",
    # Vector DB
    "qdrant-client>=1.10.0",
    # BM25
    "rank-bm25>=0.2.2",
    # Document loaders
    "pypdf>=6.14.2",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.6",
    # Config
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    # Observability
    "prometheus-client>=0.20.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    # Storage
    "aiosqlite>=0.20.0",
    # Utilities
    "tenacity>=9.0.0",  # 9.1.4 conflicts with opentelemetry-sdk<=1.42.1
    "httpx>=0.27.0",
    "tqdm>=4.66.0",
    "rich>=15.0.0",
    # diskcache (transitive via llama-cpp-python): CVE-2025-69872 (CVSS 9.8).
    # No fixed version is available on PyPI as of 2025-06-23 — track upstream.
    "diskcache>=5.6.3",
    "opentelemetry-instrumentation-openai>=0.61.0",
    "numpy>=2.4.6",
    "pyrefly>=0.60.0",
    "basedpyright>=1.39.8",
]

[project.optional-dependencies]
graph = [
    "neo4j>=5.0.0",
]
api-embeddings = [
    "redis>=5.0.0",
    "openai>=1.0.0",
    "voyageai>=0.3.0",
    "cohere>=7.0.0",
    "google-generativeai>=0.8.0",
]
evals = [
    "ragas>=0.1.20",
    "deepeval>=0.21.0",
    "datasets>=2.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: FastAPI's Depends() in argument defaults is the intended pattern.
ignore = ["B008"]

[tool.basedpyright]
# neo4j is an optional dependency — suppress all unresolved-import errors for it.
reportMissingModuleSource = false
# These rules fire on Any/Unknown that propagates from stdlib stubs
# (json.loads, numpy, MagicMock, dataclasses.asdict) — not fixable in user code.
reportAny = false
reportExplicitAny = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownMemberType = false

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
# type: ignore comments often serve pyright/basedpyright too — don't warn when mypy 3.12 resolves them.
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["datasets.*", "ragas.*", "deepeval.*", "FlagEmbedding.*", "llama_cpp.*", "rank_bm25.*", "redis.*", "openai.*", "voyageai.*", "cohere.*", "google.*"]
ignore_errors = true

[[tool.mypy.overrides]]
# llama-cpp-python stream stubs return complex union types not resolvable by mypy.
module = ["src.infrastructure.llm.llama_cpp_provider"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["src.evals.generation.faithfulness", "src.evals.generation.relevance", "src.evals.generation.hallucination"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
