[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "rag-platform"
version = "0.1.0"
description = "Local enterprise RAG platform — Clean Architecture, Hybrid Search, llama.cpp"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.139.0",
    "starlette>=0.40.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # LLM
    "llama-cpp-python>=0.3.32",
    # Embeddings & Reranking
    "numpy>=2.4.6",
    "sentence-transformers>=3.0.0",
    "FlagEmbedding>=1.2.0",
    # Vector DB
    "qdrant-client>=1.10.0",
    # BM25
    "rank-bm25>=0.2.2",
    # Document loaders
    "pypdf>=6.14.2",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.6",
    # Config
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    # Observability
    "prometheus-client>=0.20.0",
    "opentelemetry-sdk>=1.43.0",
    "opentelemetry-exporter-otlp>=1.43.0",
    # Storage / cache
    "aiosqlite>=0.20.0",
    "redis>=5.0.0",
    # Utilities
    # Match deepeval<=2.x (tenacity<=9.0.0) and langchain/llama-index (tenacity<10).
    "tenacity>=9.0.0,<9.1",
    "httpx>=0.27.0",
    "tqdm>=4.66.0",
    "rich>=15.0.0",
    # Patched diskcache fork for CVE-2025-69872 (provides the `diskcache` module).
    "diskcache-weave>=5.6.3.post1",
    "opentelemetry-instrumentation-openai>=0.62.1",
    "pyrefly>=0.60.0",
    "basedpyright>=1.39.9",
]

[tool.uv]
# Transitive deps declare `diskcache` (CVE-2025-69872); redirect to the weave fork.
dependency-metadata = [
    { name = "llama-cpp-python", requires-dist = [
        "typing-extensions>=4.5.0",
        "numpy>=1.20.0",
        "diskcache-weave>=5.6.3.post1",
        "jinja2>=2.11.3",
    ]},
    { name = "ragas", requires-dist = [
        "appdirs",
        "datasets",
        "diskcache-weave>=5.6.3.post1",
        "instructor",
        "langchain",
        "langchain-community",
        "langchain-core",
        "langchain-openai",
        "nest-asyncio",
        "networkx",
        "numpy",
        "openai",
        "pillow",
        "pydantic",
        "rich",
        "scikit-network",
        "tiktoken",
        "tqdm",
        "typer",
    ]},
    { name = "deepeval", requires-dist = [
        "requests",
        "tqdm",
        "pytest",
        "tabulate",
        "typer",
        "rich",
        "protobuf",
        "pydantic",
        "sentry-sdk",
        "pytest-repeat",
        "pytest-xdist",
        "portalocker",
        "langchain",
        "llama-index",
        "langchain-core",
        "langchain_openai",
        "langchain-community",
        "docx2txt~=0.8",
        "importlib-metadata>=6.0.2",
        "tenacity>=8.0.0,<=10.0.0",
        "opentelemetry-api<2.0.0,>=1.24.0",
        "opentelemetry-sdk<2.0.0,>=1.24.0",
        "opentelemetry-exporter-otlp-proto-grpc<2.0.0,>=1.24.0",
        "grpcio<2.0.0,>=1.67.1",
        "nest-asyncio",
        "datasets",
        "ollama",
    ]},
]
override-dependencies = [
    "tenacity>=9.0.0,<9.1",
]

[project.optional-dependencies]
graph = [
    "neo4j>=5.0.0",
]
api-embeddings = [
    "redis>=5.0.0",
    "openai>=1.0.0",
    "voyageai>=0.3.0",
    "cohere>=7.0.0",
    "google-generativeai>=0.8.0",
]
evals = [
    "ragas>=0.1.20",
    "deepeval>=0.21.0",
    "datasets>=2.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.20",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: FastAPI's Depends() in argument defaults is the intended pattern.
ignore = ["B008"]

[tool.basedpyright]
# neo4j is an optional dependency — suppress all unresolved-import errors for it.
reportMissingModuleSource = false
# These rules fire on Any/Unknown that propagates from stdlib stubs
# (json.loads, numpy, MagicMock, dataclasses.asdict) — not fixable in user code.
reportAny = false
reportExplicitAny = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownMemberType = false

[tool.pyrefly]
search-path = ["src", "scripts"]
# Optional runtime deps — install via uv sync --extra api-embeddings / graph / evals.
ignore-missing-imports = [
    "cohere",
    "cohere.*",
    "openai",
    "openai.*",
    "voyageai",
    "voyageai.*",
    "google",
    "google.*",
    "neo4j",
    "neo4j.*",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
# type: ignore comments often serve pyright/basedpyright too — don't warn when mypy 3.12 resolves them.
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["datasets.*", "ragas.*", "deepeval.*", "FlagEmbedding.*", "llama_cpp.*", "rank_bm25.*", "redis", "redis.*", "openai.*", "voyageai.*", "cohere.*", "google.*"]
follow_imports = "skip"
ignore_errors = true

[[tool.mypy.overrides]]
# llama-cpp-python stream stubs return complex union types not resolvable by mypy.
module = ["src.infrastructure.llm.llama_cpp_provider"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["src.evals.generation.faithfulness", "src.evals.generation.relevance", "src.evals.generation.hallucination"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # qdrant-client version probe when Docker is not running (integration skip checks)
    "ignore:Failed to obtain server version:UserWarning:qdrant_client.qdrant_remote",
    # SWIG bindings from torch/sentence-transformers on Python 3.13 (upstream)
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
